--- a/displaystyle.css
+++ b/displaystyle.css
@@ -46,6 +46,10 @@ body{
     width: 100%;
 }
 
-tr:nth-child(odd){
+tr:nth-child(even){
     background-color: burlywood;
+}
+
+tr{
+    border-left: 1px solid black;
 }
